Initial commit: Glagolitica Transliterator

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="header">
-    <h1>Glagolitica Translator</h1>
+    <h1>Glagolitica Transliterator</h1>
     <button id="theme-toggle" aria-label="Promijeni temu">🌓</button>
   </header>
 
